--- a/Hackathon2023/Pages/Index.razor
+++ b/Hackathon2023/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Welcome to the Innofactor Pre-trained Tool</h1>
-<p> Have a look around! </p>
+<h1>Welcome to the HBPT (HenriksBodega Pre-trained tool)</h1>
+<p> Remember to check if it is friday. ='3' </p>
 <p> Anything that you would want is easy to be found. </p>
 
