--- a/Hackathon2023/Shared/NavMenu.razor
+++ b/Hackathon2023/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">
-            IPT
+            BodegaBot
         </a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
@@ -17,6 +17,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="generalchat">
+                <span class="oi oi-person" aria-hidden="true"></span> General Chat
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="cv">
                 <span class="oi oi-person" aria-hidden="true"></span> CV
             </NavLink>
@@ -29,6 +34,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="workitems">
                 <span class="oi oi-spreadsheet" aria-hidden="true"></span> WorkItems
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="erdetfredag">
+                <span class="oi oi-spreadsheet" aria-hidden="true"></span> Er det fredag?
             </NavLink>
         </div>
     </nav>
