--- a/Hackathon2023/Shared/MainLayout.razor
+++ b/Hackathon2023/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
         <NavMenu />
     </div>
 
-    <main>
+    <main class="mainpage">
         <div class="top-row px-4">
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
