--- a/Hackathon2023/wwwroot/css/site.css
+++ b/Hackathon2023/wwwroot/css/site.css
@@ -72,6 +72,7 @@ a, .btn-link {
 
 .chat {
     margin: 5px;
+    display: flow-root
 }
 
 .user {
@@ -97,10 +98,11 @@ a, .btn-link {
     float: left;
 }
 .chatblock {
+    display: inherit
 }
 
 .msg {
-    white-space: pre;
+    white-space: break-spaces;
 }
 
 .chatbouble {
@@ -190,4 +192,8 @@ button:hover {
     min-height: 50px;
     text-align: center;
     margin-top: 20%;
+}
+
+.mainpage {
+    width: 80%;
 }
